--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5|^8.0",
         "databox/databox": "^2.0",
         "fideloper/proxy": "^4.4",
+        "google/apiclient": "^2.14",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5"
     },
