--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "fideloper/proxy": "^4.4",
         "google/apiclient": "^2.14",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "kreait/laravel-firebase": "^3.0",
+        "google/cloud-bigquery": "^1.23",
+        "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
